--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
 	"scripts": {
 		"test": "./node_modules/.bin/jest"
 	},
-	"dependencies": {},
+	"dependencies": {
+		"node-fetch": "^2.6.1"
+	},
 	"devDependencies": {
 		"jest": "^25.1.0"
 	}
