--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"test": "./node_modules/.bin/jest"
 	},
 	"dependencies": {
-		"node-fetch": "^2.6.1"
+		"node-fetch": "^2.6.1",
+		"sinon": "^9.2.1"
 	},
 	"devDependencies": {
 		"jest": "^25.1.0"
